--- a/edgeneoapi/src/main/resources/application.properties
+++ b/edgeneoapi/src/main/resources/application.properties
@@ -46,8 +46,8 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Google Login
-spring.security.oauth2.client.registration.google.client-id=455998660042-vld1o5egbmogrbf5qaqomqht62458ff4.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:9000/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.client-name=Google
